--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
         "@angular/platform-browser-dynamic": "4.1.0",
         "@ionic-native/camera": "^3.8.0",
         "@ionic-native/core": "3.7.0",
+        "@ionic-native/device": "^3.12.1",
+        "@ionic-native/keyboard": "^3.12.1",
+        "@ionic-native/native-keyboard": "^3.12.1",
         "@ionic-native/splash-screen": "3.7.0",
         "@ionic-native/sqlite": "^3.12.1",
-        "@ionic-native/status-bar": "3.7.0",
+        "@ionic-native/status-bar": "^3.7.0",
         "@ionic/storage": "2.0.1",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-native-keyboard": "^1.4.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -52,7 +56,6 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-device": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
@@ -62,7 +65,11 @@
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
             },
             "cordova-plugin-console": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-native-keyboard": {
+                "LICENSE": "TRIAL"
+            },
+            "cordova-plugin-device": {}
         },
         "platforms": [
             "ios"
