--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@angular/platform-browser": "4.1.0",
         "@angular/platform-browser-dynamic": "4.1.0",
         "@ionic-native/camera": "^3.8.0",
+        "@ionic-native/contacts": "^3.12.1",
         "@ionic-native/core": "3.7.0",
         "@ionic-native/device": "^3.12.1",
+        "@ionic-native/image-resizer": "^3.12.1",
         "@ionic-native/keyboard": "^3.12.1",
         "@ionic-native/native-keyboard": "^3.12.1",
         "@ionic-native/splash-screen": "3.7.0",
@@ -33,7 +35,9 @@
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-contacts": "^2.3.1",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-image-resizer": "git+https://github.com/protonet/cordova-plugin-image-resizer.git",
         "cordova-plugin-native-keyboard": "^1.4.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -69,7 +73,10 @@
             "cordova-plugin-native-keyboard": {
                 "LICENSE": "TRIAL"
             },
-            "cordova-plugin-device": {}
+            "cordova-plugin-device": {},
+            "cordova-plugin-contacts": {
+                "CONTACTS_USAGE_DESCRIPTION": " "
+            }
         },
         "platforms": [
             "ios"
